Verion 0.9.45dev (?? ??? 2004)
  - Fixed bug 1063720: advanced search translation
  - Making search page dynamic on the client-side for admins
  - Combining & converting import/export pages to new tabbed GUI
  - Edited import/export link in trailer
  - Fixed bug 1009183: exporting event from another user's calendar or
    from a layer generated an empty ics file.  Added "Include all layers"
    option on main export page also.  Include WebCalendar version number
    in ics file.
  - Removing blank lines from the end of files
  - Temporarily disabling the print-media stylesheet
  - Fixing a TON of bugs in almost all of the views NOTE: view_m, day, and
  week.php are in need of a major php code overhaul to fix some of the
  remaining bugs
  - Fixed bug 1060764: forgot to add translation stuff to "public access" in
  trailer
  - Fixed bug 1060779: also forgot to translation stuff for "preview" views
  - Fixing bug 1060784: "category" id in functions.php because it caused a conflict with category.php
  - Added a favicon.ico and supporting code
  - Adding new edit_entry & admin.php code (tabbed GUI)
  - Made view_entry reminders statement use singular/plural days, hours & minutes as needed
  - Added title attributes in activity_log.php
  - Cleaning up HTML & CSS
  - Updated view-preview doc with more modular code
  - Adding additional save button in pref.php to mirror admin.php
  - Extending admin.php to pref.php
  - Modifying class 'navlinks' to now read just 'nav'
  - Adding patch 1059984: alternating row colors for activity_log.php
  - Removing obsolete styles from styles.php
  - Adding title attributes to various links
  - Moving & making login/logout link to be inline with current user in
  trailer & dynamic depending on if user is logged in or not
  - Updating upgrading docs with easier to read code areas
  - Added patch 1059130: minical function implementation
  - Added patch 1016648: datesel.php when global vars=off